13.08 Completed multiple method 18.08 The methods are complete, multithreading remains